--- a/style.css
+++ b/style.css
@@ -1,1 +1,55 @@
+p{
+  color: red;
+}
 
+header{
+  color: blue;
+}
+
+body{
+  color: green;
+}
+
+footer{
+  color: gray;
+}
+
+ul{
+  color: yellow;
+}
+
+ol{
+  color: pink;
+}
+
+h1{
+  color: purple;
+}
+
+ul{
+  color: yellow;
+}
+
+header{
+  color: orange;
+}
+
+footer{
+  color: green;
+}
+
+body{
+  color: gray;
+}
+
+p{
+  color: yellow;
+}
+
+ol{
+  color: black;
+}
+
+h1{
+  color: navy;
+}
